<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.mirea.practice</groupId>
    <artifactId>algorithms-and-data-structures</artifactId>
    <version>2024.1</version>
    <packaging>pom</packaging>
    <name>algorithms-and-data-structures</name>
    <description>Алгоритмы и структуры данных в системах реального времени</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <version.junit>1.11.1</version.junit>
        <version.jupiter>5.11.1</version.jupiter>
        <version.pmd>6.52.0</version.pmd>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/BasePractice/algorithms-and-data-structures-2024.git</connection>
        <url>https://github.com/BasePractice/algorithms-and-data-structures-2024</url>
        <developerConnection>scm:git:https://github.com/BasePractice/algorithms-and-data-structures-2024.git
        </developerConnection>
        <tag>2024.1</tag>
    </scm>

    <modules>
        <module>students/0000001</module>
        <module>students/23K0690</module>
        <module>students/23K0120</module>
        <module>students/23K0143</module>
        <module>students/23K0365</module>
        <module>students/23K0368</module>
        <module>students/23K0754</module>
        <module>students/24K0458</module>
        <module>students/23K0565</module>
        <module>students/23K0350</module>
        <module>students/23K1302</module>
        <module>students/23K0346</module>
        <module>students/24K0459</module>
        <module>students/23K0364</module>
        <module>students/23K0155</module>
        <module>students/23K0114</module>
        <module>students/23K0341</module>
        <module>students/23K0823</module>
        <module>students/23K0087</module>
        <module>students/23K0112</module>
        <module>students/23K0351</module>
        <module>students/23K0169</module>
        <module>students/23K0563</module>
        <module>students/23K0116</module>
        <module>students/23K0339</module>
        <module>students/23K0691</module>
        <module>students/23K0815</module>
        <module>students/23K0089</module>
        <module>students/23K0375</module>
        <module>students/23K0340</module>
        <module>students/23K0342</module>
        <module>students/23K0354</module>
        <module>students/23K0689</module>
        <module>students/23F0011</module>
        <module>students/23K1234</module>
        <module>students/23K0818</module>
        <module>students/23K0202</module>
        <module>students/23K0130</module>
        <module>students/23K0164</module>
        <module>students/23K0140</module>
        <module>students/23K0359</module>
        <module>students/23K0688</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-api</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${version.jupiter}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${version.jupiter}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${version.jupiter}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${version.jupiter}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <target>${maven.compiler.target}</target>
                    <source>${maven.compiler.source}</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.5.0</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.18.2</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <excludes>**/canonical/db/**/*</excludes>
                    <configLocation>checkstyle.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <failOnViolation>true</failOnViolation>
                    <outputFileFormat>xml</outputFileFormat>
                    <sourceDirectories>
                        <sourceDirectory>src/main/java</sourceDirectory>
                        <sourceDirectory>src/test/java</sourceDirectory>
                    </sourceDirectories>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.19.0</version>
                <configuration>
                    <analysisCache>true</analysisCache>
                    <analysisCacheLocation>${project.build.directory}/pmd/pmd.cache</analysisCacheLocation>
                    <printFailingErrors>true</printFailingErrors>
                    <failOnViolation>true</failOnViolation>
                    <targetJdk>${maven.compiler.target}</targetJdk>
                    <linkXRef>false</linkXRef>
                    <rulesets>
                        <ruleset>rulesets/java/quickstart.xml</ruleset>
                    </rulesets>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>duplicate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>aggregate-cpd</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-core</artifactId>
                        <version>${version.pmd}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-java</artifactId>
                        <version>${version.pmd}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
